@@ -42,13 +42,19 @@
 #include <vpr/vprConfig.h>
 
 #if defined(HAVE_BACKTRACE)
-#include <sys/types.h>
-#include <unistd.h>
-#include <execinfo.h>
+#  include <sys/types.h>
+#  include <unistd.h>
+#  include <execinfo.h>
+#  include <sstream>
+#elif defined(VPR_OS_Windows)
+#  include <stdlib.h>
+#  include <dbghelp.h>
+#  include <iomanip>
+#  include <sstream>
+#  include <boost/format.hpp>
+#endif
 
 #include <string>
-#include <sstream>
-#endif
 
 #if (! defined(__INTEL_COMPILER) && defined(__GNUC__) && \
      ((__GNUC__ == 3 && __GNUC_MINOR__ >= 3) || __GNUC__ > 3)) || \
@@ -61,8 +67,108 @@
 
 #include <vpr/SystemBase.h>
 
+// In case _M_X64 is not defined, define it so that we do not have to test
+// for _M_AMD64 and _M_X64 repeatedly.
+#if defined(_M_AMD64) && ! defined(_M_X64)
+#  define _M_X64 _M_AMD64
+#endif
+
+
+using boost::format;
+
 namespace
 {
+#if defined(VPR_OS_Windows) && defined(_DEBUG)
+// NOTE: There is no IA64 version of this function since the IA64 version
+// of Windows has been discontinued.
+#if defined(_M_IX86) || defined(_M_X64)
+#pragma auto_inline(off)
+DWORD_PTR getProgramCounter()
+{
+#  if defined(_M_IX86)
+#     define PTR_SIZE 4
+#     define AXREG eax
+#     define BPREG ebp
+#  elif defined(_M_X64)
+#     define PTR_SIZE 8
+#     define AXREG rax
+#     define BPREG rbp
+#  endif   /* defined(_M_IX86) */
+
+   DWORD_PTR program_counter;
+
+   // Get the return address from the current stack frame
+   // and store it in program_counter.
+   __asm mov AXREG, [BPREG + PTR_SIZE]
+   __asm mov [program_counter], AXREG
+
+   return program_counter;
+
+#  undef BPREG
+#  undef AXREG
+#  undef PTR_SIZE
+}
+#pragma auto_inline(on)
+#endif   /* defined(_M_IX86) || defined(_M_X64) */
+
+// This is based on WheatyExceptionReport::GetLogicalAddress().  The
+// original can be found in the March 2002 issue of MSDN Magazine:
+//
+//   http://msdn.microsoft.com/msdnmag/issues/02/03/hood/default.aspx
+bool getLogicalAddress(void* addr, char* szModule, const DWORD len,
+                       DWORD& section, DWORD& offset)
+{
+   MEMORY_BASIC_INFORMATION mbi;
+
+   if ( ! VirtualQuery(addr, &mbi, sizeof(mbi)) )
+   {
+      return false;
+   }
+
+   DWORD64 h_module = (DWORD64) mbi.AllocationBase;
+
+   if ( ! GetModuleFileName((HMODULE) h_module, szModule, len) )
+   {
+      return false;
+   }
+
+   // Point to the DOS header in memory.
+   PIMAGE_DOS_HEADER dos_header = (PIMAGE_DOS_HEADER) h_module;
+
+   // From the DOS header, find the NT (PE) header.
+   PIMAGE_NT_HEADERS nt_header =
+      (PIMAGE_NT_HEADERS) (h_module + dos_header->e_lfanew);
+
+   PIMAGE_SECTION_HEADER pSection = IMAGE_FIRST_SECTION(nt_header);
+
+   // rva is offset from module load address.
+   DWORD64 rva = (DWORD64) addr - h_module;
+
+   // Iterate through the section table, looking for the one that encompasses
+   // the linear address.
+   for ( unsigned int i = 0;
+         i < nt_header->FileHeader.NumberOfSections;
+         ++i, ++pSection )
+   {
+      DWORD sectionStart = pSection->VirtualAddress;
+      DWORD sectionEnd = sectionStart +
+         max(pSection->SizeOfRawData, pSection->Misc.VirtualSize);
+
+      // Is the address in this section???
+      if ( rva >= sectionStart && rva <= sectionEnd )
+      {
+         // Yes, address is in the section.  Calculate section and offset,
+         // and store in the "section" & "offset" params, which were
+         // passed by reference.
+         section = i + 1;
+         offset = rva - sectionStart;
+         return true;
+      }
+   }
+
+   return false;   // Should never get here!
+}
+#endif   /* ifdef VPR_OS_Windows */
 
 std::string demangleTraceString(char* traceLine)
 {
@@ -151,6 +257,147 @@ std::string SystemBase::getCallStack()
    free(strings);
 
    ret_stack = trace_stream.str();
+#elif defined(VPR_OS_Windows) && defined(_DEBUG)
+   // This will be used over and over again below.  In particular, we need
+   // to be sure that SymInitialize() and SymCleanup() are called with the
+   // same process handle value.
+   const HANDLE proc = GetCurrentProcess();
+
+   // Set up the symbol loading and handling options.
+   SymSetOptions(SYMOPT_LOAD_LINES | SYMOPT_DEFERRED_LOADS | SYMOPT_UNDNAME);
+
+   // Initialize the symbol loading.  If this fails, there is no way we can
+   // put together a meaningful stack trace.
+   if ( SymInitialize(proc, NULL, TRUE) )
+   {
+      DWORD arch;
+      STACKFRAME64 sf;
+      CONTEXT ctx;
+      DWORD_PTR frame_offset;
+
+      // NOTE: There is no IA64 case here because the IA64 version of Windows
+      // has been discontinued.
+#if defined(_M_IX86)
+      arch = IMAGE_FILE_MACHINE_I386;
+      __asm mov [frame_offset], ebp
+#elif defined(_M_X64)
+      arch = IMAGE_FILE_MACHINE_AMD64;
+      __asm mov [frame_offset], rbp
+#endif
+
+      // Initialize the stack frame for this frame.  If this is not done,
+      // StackWalk64() will not work.
+      memset(&sf, NULL, sizeof(sf));
+      sf.AddrPC.Offset    = getProgramCounter();
+      sf.AddrPC.Mode      = AddrModeFlat;
+      sf.AddrFrame.Offset = frame_offset;
+      sf.AddrFrame.Mode   = AddrModeFlat;
+
+      std::stringstream trace_stream;
+
+      // Account for architecture-specific pointer value sizes.
+#ifdef VPR_OS_Win32
+      const unsigned int width(8);
+#else
+      const unsigned int width(16);
+#endif
+
+      trace_stream << "Address" << "  " << std::setw(width)
+                   << "Frame" << "    " << std::setw(width)
+                   << "Function            Source File" << std::endl;
+
+      while ( 1 )
+      {
+         bool more = StackWalk64(arch, proc, GetCurrentThread(), &sf,
+                                 &ctx, NULL, SymFunctionTableAccess64,
+                                 SymGetModuleBase64, NULL);
+
+         // End of the stack frame.
+         if ( ! more || 0 == sf.AddrFrame.Offset )
+         {
+            break;
+         }
+
+         // Use appropriate pointer width formatting for 32- and 64-bit
+         // architectures.
+#ifdef VPR_OS_Win32
+         format addr("%1$+08x    %2$+08x ");
+#else
+         format addr("%1$+016x    %2$+016x ");
+#endif
+         trace_stream << addr % sf.AddrPC.Offset % sf.AddrFrame.Offset;
+
+         // Get the name of the function for this stack frame entry.
+         BYTE symbol_buffer[sizeof(SYMBOL_INFO) + 1024];
+         PSYMBOL_INFO symbol_info = (PSYMBOL_INFO) symbol_buffer;
+         symbol_info->SizeOfStruct = sizeof(symbol_buffer);
+         symbol_info->MaxNameLen = 1024;
+
+         // Displacement of the input address relative to the start of the
+         // symbol.
+         DWORD64 sym_displacement(0);
+
+         bool got_symbol = SymFromAddr(proc, sf.AddrPC.Offset,
+                                       &sym_displacement, symbol_info);
+
+         if ( got_symbol )
+         {
+            format sym_addr("%1%+%2$+llx");
+            trace_stream << sym_addr % symbol_info->Name % sym_displacement;
+         }
+         // If no symbol was found, print out the logical address instead.
+         // See getLogicalAddress() above.
+         else
+         {
+            char sz_module[MAX_PATH] = "";
+            DWORD section = 0, offset = 0;
+
+            getLogicalAddress((void*) sf.AddrPC.Offset, sz_module,
+                              sizeof(sz_module), section, offset);
+
+            // Use appropriate pointer width formatting for 32- and 64-bit
+            // architectures.
+#ifdef VPR_OS_Win32
+            format log_addr("%1$+04x:%2$+08x %3%");
+#else
+            format log_addr("%1$+04x:%2$+016x %3%");
+#endif
+            trace_stream << log_addr % section % offset % sz_module;
+         }
+
+         // Get the source line for this stack frame entry.
+         IMAGEHLP_LINE64 line_info = { sizeof(IMAGEHLP_LINE64) };
+         DWORD line_displacement;
+         bool got_line = SymGetLineFromAddr64(proc, sf.AddrPC.Offset,
+                                              &line_displacement, &line_info);
+
+         if ( got_line )
+         {
+            trace_stream << "  " << line_info.FileName << " line "
+                         << line_info.LineNumber;
+         }
+
+         trace_stream << std::endl;
+/*
+         // Write out the variables.
+         // Use SymSetContext to get just the locals/params for this frame
+         IMAGEHLP_STACK_FRAME imghlp_sf;
+         imghlp_sf.InstructionOffset = sf.AddrPC.Offset;
+         SymSetContext(proc, &imghlp_sf, 0);
+
+         // Enumerate the locals/parameters
+         SymEnumSymbols(proc, 0, 0, EnumerateSymbolsCallback, &sf);
+
+         trace_stream << std::endl;
+*/
+      }
+
+      // We only overwrite ret_stack if we were successful in building up
+      // the stack trace text.
+      ret_stack = trace_stream.str();
+
+      SymCleanup(proc);
+   }
 #endif
 
    return ret_stack;
