@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2005-07-28 patrickh Implemented vpr::SystemBase::getCallStack() for debug
+                    builds on Windows.
+
 [1.0.0 released - 7.5.2005]====================================================
 2005-07-05 patrickh NEW VERSION: 1.0.0
 2005-06-15 patrickh Updated to support Windows 64-bit edition.
